--- a/main.ipynb
+++ b/main.ipynb
@@ -1,8 +1,132 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "0146fc4d",
+   "metadata": {},
+   "source": [
+    "# View All Page Contents"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
+   "id": "477ef4ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "<!DOCTYPE html PUBLIC \"-//W3C//DTD XHTML 1.0 Transitional//EN\" \"https://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd\">\n",
+      "\n",
+      "<html xmlns=\"https://www.w3.org/1999/xhtml\">\n",
+      "<head>\n",
+      "<!-- Global Site Tag (gtag.js) Google Analytics -->\n",
+      "<script async=\"\" src=\"https://www.googletagmanager.com/gtag/js?id=UA-150931768-1\"></script>\n",
+      "<script>\n",
+      "        window.dataLayer = window.dataLayer || [];\n",
+      "        function gtag(){dataLayer.push(arguments);}\n",
+      "        gtag('js', new Date());\n",
+      "        \n",
+      "        gtag('config', 'UA-150931768-1')\n",
+      "    </script>\n",
+      "<link href=\"styles/MainBlue2.css\" rel=\"Stylesheet\" type=\"text/css\"/><link href=\"SCfavicon.ico\" rel=\"SHORTCUT ICON\"/><title>\n",
+      "\tDetail Data\n",
+      "</title></head>\n",
+      "<body alink=\"aqua\" bgcolor=\"#f7f7f7\" class=\"table.DetailData\" link=\"blue\" vlink=\"blue\"><br/>\n",
+      "</body>\n",
+      "</html>\n",
+      "<table class=\"DetailData\">\n",
+      "<tr>\n",
+      "<td align=\"center\" class=\"style1aSched\" colspan=\"9\">Schedule # 6507888</td>\n",
+      "</tr><tr>\n",
+      "<td class=\"style1\" rowspan=\"2\">Property Desc:</td><td class=\"style2\" rowspan=\"2\">BLDG 51 PROSPECTOR VILLAGE COMMON AREA &amp; CLUBHOUSE FKA LOT 33 WILDERNEST FIL 2 </td><td class=\"styleBlank\" rowspan=\"1\"> </td><td class=\"styleBlank\" rowspan=\"1\"> </td><td align=\"center\" class=\"style1a\" rowspan=\"1\">Subdiv</td><td align=\"center\" class=\"style1a\" rowspan=\"1\">Filing</td><td class=\"style1a\" rowspan=\"1\">Phase</td><td class=\"style1\" rowspan=\"1\">Block</td><td class=\"style1\" rowspan=\"1\">Lot</td>\n",
+      "</tr><tr>\n",
+      "<td class=\"styleBlank\" rowspan=\"1\"> </td><td class=\"style1\" rowspan=\"1\">SubCode</td><td class=\"style2a\" rowspan=\"1\">1169</td><td class=\"style2a\" rowspan=\"1\">0</td><td class=\"style2a\" rowspan=\"1\">0</td><td class=\"style2\" rowspan=\"1\">51</td><td class=\"style2\" rowspan=\"1\">0</td>\n",
+      "</tr><tr>\n",
+      "<td class=\"style1\" rowspan=\"1\">Phys. Address:</td><td class=\"style2\" rowspan=\"1\">0050 WILDERNEST CT (CR 1271) BLDG 51</td><td class=\"styleBlank\" rowspan=\"1\"> </td><td class=\"style1\" rowspan=\"1\">PPI:</td><td class=\"style2a\" colspan=\"5\" rowspan=\"1\">2097-1430-05-001</td>\n",
+      "</tr><tr>\n",
+      "<td class=\"styleBlank\" rowspan=\"2\"> </td><td align=\"center\" class=\"style1a\" rowspan=\"2\" valign=\"bottom\">Ownership</td><td class=\"styleBlank\" rowspan=\"1\"> </td><td class=\"style1\" rowspan=\"1\">Econ:</td><td class=\"style2a\" rowspan=\"1\">4</td><td class=\"style2\" colspan=\"4\" rowspan=\"1\">Sil/Dillon</td>\n",
+      "</tr><tr>\n",
+      "<td class=\"styleBlank\" rowspan=\"1\"> </td><td class=\"style1\" rowspan=\"1\">Nhood:</td><td class=\"style2a\" rowspan=\"1\">02300</td><td class=\"style2\" colspan=\"4\" rowspan=\"1\">Wildernest</td>\n",
+      "</tr><tr>\n",
+      "<td class=\"style1\" rowspan=\"1\">Primary:</td><td class=\"style2\" rowspan=\"1\">PROSPECTOR VILLAGE HOMEOWNERS ASSOC, </td><td class=\"styleBlank\" rowspan=\"1\"> </td><td class=\"style1\" rowspan=\"1\">TaxArea:</td><td class=\"style2a\" colspan=\"1\" rowspan=\"1\">6</td><td class=\"styleBlank\" rowspan=\"1\"> </td><td class=\"style1a\" rowspan=\"1\">2025</td><td class=\"style1\" rowspan=\"1\">Tship:</td><td class=\"style2\" colspan=\"1\" rowspan=\"1\">5</td>\n",
+      "</tr><tr>\n",
+      "<td class=\"style1\" rowspan=\"1\">Secondary:</td><td class=\"style2\" rowspan=\"1\"></td><td class=\"styleBlank\" rowspan=\"1\"> </td><td class=\"style1\" rowspan=\"1\">AssdVal:</td><td class=\"style2a\" rowspan=\"1\">0</td><td align=\"center\" bgcolor=\"White\" rowspan=\"1\"><a href=\"https://summitcountyco.gov/services/assessor/understanding_property_taxes_in_colorado.php\" target=\"_blank\"><button style=\"background-color: #518982; height: 22px; width: 160px;\">Est. Tax/Tax Rate:</button></a></td><td class=\"style2a\" rowspan=\"1\">66.723</td><td class=\"style1\" rowspan=\"1\">Range:</td><td class=\"style2a\" rowspan=\"1\">78</td>\n",
+      "</tr><tr>\n",
+      "<td class=\"styleBlank\" rowspan=\"2\"> </td><td align=\"center\" class=\"style1a\" rowspan=\"2\" valign=\"bottom\">Mailing Address</td><td class=\"styleBlank\" rowspan=\"1\"> </td><td align=\"center\" class=\"style1a\" rowspan=\"1\" valign=\"bottom\">Reception</td><td align=\"center\" class=\"style1a\" rowspan=\"1\" valign=\"bottom\">Sale Date</td><td align=\"center\" class=\"docLink\" rowspan=\"1\" valign=\"bottom\"><a href=\"pdfs/doctype.pdf\" target=\"_BLANK\">Document Type</a></td><td align=\"center\" class=\"style1a\" colspan=\"3\" rowspan=\"1\" valign=\"bottom\">Sale Price</td>\n",
+      "</tr><tr>\n",
+      "<td class=\"styleBlank\" rowspan=\"1\"> </td><td class=\"style2b\" rowspan=\"1\">1120146</td><td class=\"style2b\" rowspan=\"1\">8/26/2016</td><td class=\"style2b\" rowspan=\"1\">EAS</td><td class=\"style2b\" colspan=\"3\" rowspan=\"1\">0</td>\n",
+      "</tr><tr>\n",
+      "<td class=\"style1\" rowspan=\"1\">C/O</td><td class=\"style2\" rowspan=\"1\"></td><td class=\"styleBlank\" rowspan=\"1\"> </td><td class=\"style2b\" rowspan=\"1\">674608</td><td class=\"style2b\" rowspan=\"1\">1/22/2002</td><td class=\"style2b\" rowspan=\"1\">ACD</td><td class=\"style2b\" colspan=\"3\" rowspan=\"1\">0</td>\n",
+      "</tr><tr>\n",
+      "<td class=\"style1\" rowspan=\"1\">Addr:</td><td class=\"style2\" rowspan=\"1\">PO BOX 5265</td><td class=\"styleBlank\" rowspan=\"1\"> </td><td class=\"style2b\" rowspan=\"1\">674607</td><td class=\"style2b\" rowspan=\"1\">1/22/2002</td><td class=\"style2b\" rowspan=\"1\">PLT</td><td class=\"style2b\" colspan=\"3\" rowspan=\"1\">0</td>\n",
+      "</tr><tr>\n",
+      "<td class=\"style1\" rowspan=\"1\">CSZ</td><td class=\"style2\" rowspan=\"1\">FRISCO CO 804435265</td><td class=\"styleBlank\" rowspan=\"1\"> </td><td class=\"style2b\" rowspan=\"1\">632916</td><td class=\"style2b\" rowspan=\"1\">9/19/2000</td><td class=\"style2b\" rowspan=\"1\">PLT</td><td class=\"style2b\" colspan=\"3\" rowspan=\"1\">0</td>\n",
+      "</tr><tr>\n",
+      "<td class=\"styleBlank\" colspan=\"2\" rowspan=\"8\"> </td>\n",
+      "</tr><tr>\n",
+      "<td class=\"styleBlank\" rowspan=\"1\"> </td><td class=\"style2b\" rowspan=\"1\">620549</td><td class=\"style2b\" rowspan=\"1\">4/17/2000</td><td class=\"style2b\" rowspan=\"1\">COV</td><td class=\"style2b\" colspan=\"3\" rowspan=\"1\">0</td>\n",
+      "</tr><tr>\n",
+      "<td class=\"styleBlank\" rowspan=\"1\"> </td><td class=\"style2b\" rowspan=\"1\">620548</td><td class=\"style2b\" rowspan=\"1\">4/17/2000</td><td class=\"style2b\" rowspan=\"1\">PLT</td><td class=\"style2b\" colspan=\"3\" rowspan=\"1\">0</td>\n",
+      "</tr><tr>\n",
+      "<td class=\"styleBlank\" rowspan=\"1\"> </td><td class=\"style2b\" rowspan=\"1\">620547</td><td class=\"style2b\" rowspan=\"1\">4/17/2000</td><td class=\"style2b\" rowspan=\"1\">PLT</td><td class=\"style2b\" colspan=\"3\" rowspan=\"1\">0</td>\n",
+      "</tr><tr>\n",
+      "<td class=\"styleBlank\" rowspan=\"1\"> </td><td class=\"style2b\" rowspan=\"1\">616327</td><td class=\"style2b\" rowspan=\"1\">1/25/2000</td><td class=\"style2b\" rowspan=\"1\">ACD</td><td class=\"style2b\" colspan=\"3\" rowspan=\"1\">0</td>\n",
+      "</tr><tr>\n",
+      "<td class=\"styleBlank\" rowspan=\"1\"> </td><td class=\"style2b\" rowspan=\"1\">616326</td><td class=\"style2b\" rowspan=\"1\">1/31/2000</td><td class=\"style2b\" rowspan=\"1\">PLT</td><td class=\"style2b\" colspan=\"3\" rowspan=\"1\">0</td>\n",
+      "</tr><tr>\n",
+      "<td class=\"styleBlank\" rowspan=\"1\"> </td><td class=\"style2b\" rowspan=\"1\">605290</td><td class=\"style2b\" rowspan=\"1\">9/15/1999</td><td class=\"style2b\" rowspan=\"1\">COV</td><td class=\"style2b\" colspan=\"3\" rowspan=\"1\">0</td>\n",
+      "</tr><tr>\n",
+      "<td class=\"styleBlank\" rowspan=\"1\"> </td><td class=\"style2b\" rowspan=\"1\">605289</td><td class=\"style2b\" rowspan=\"1\">9/15/1999</td><td class=\"style2b\" rowspan=\"1\">PLT</td><td class=\"style2b\" colspan=\"3\" rowspan=\"1\">0</td>\n",
+      "</tr><tr>\n",
+      "<td class=\"styleBlank\" colspan=\"2\" rowspan=\"1\"> </td><td class=\"styleBlank\" colspan=\"1\" rowspan=\"1\"> </td><td class=\"styleBlank\" colspan=\"6\" rowspan=\"1\"> </td>\n",
+      "</tr>\n",
+      "</table><table class=\"ValueData\">\n",
+      "<tr>\n",
+      "<td align=\"center\" class=\"style1a\" colspan=\"3\" valign=\"bottom\">2025 Actual Value</td><td class=\"styleBlank\"></td><td align=\"center\" class=\"style1a\" colspan=\"3\" valign=\"bottom\">2024 Actual Value</td>\n",
+      "</tr><tr>\n",
+      "<td class=\"style2c\">9187</td><td class=\"style2c\">HOA NON-RESIDENTIAL LAND</td><td class=\"style2c\">$</td><td class=\"styleBlank\"> </td><td class=\"style2d\">9187</td><td class=\"style2d\">HOA NON-RESIDENTIAL LAND           </td><td class=\"style2d\">$</td>\n",
+      "</tr><tr>\n",
+      "<td class=\"style2c\">9287</td><td class=\"style2c\">HOA NON-RESIDENTIAL IMP</td><td class=\"style2c\">$</td><td class=\"styleBlank\"> </td><td class=\"style2d\">9287</td><td class=\"style2d\">HOA NON-RESIDENTIAL IMP            </td><td class=\"style2d\">$</td>\n",
+      "</tr><tr>\n",
+      "<td class=\"style1\" colspan=\"2\" rowspan=\"1\">Total Value:</td><td class=\"style2d\">$</td><td class=\"styleBlank\"> </td><td class=\"style1\" colspan=\"2\" rowspan=\"1\">Total Value:</td><td class=\"style2d\">$</td>\n",
+      "</tr>\n",
+      "</table><table class=\"ImpData\">\n",
+      "<tr>\n",
+      "<td class=\"Impstyle1\" colspan=\"2\">Improvement Info:</td><td class=\"Impstyle1\">First:</td><td class=\"Impstyle2\">575</td><td class=\"Impstyle1\">FinHalf:</td><td class=\"Impstyle2\">0</td><td class=\"Impstyle1\">Beds:</td><td class=\"Impstyle2\">0</td><td class=\"Impstyle1\">Units:</td><td class=\"Impstyle2\">0</td><td class=\"Impstyle1\">Impstyle:</td><td class=\"Impstyle2\">Unknown</td><td class=\"Impstyle1\">Grade:</td><td class=\"Impstyle2\">Average</td>\n",
+      "</tr><tr>\n",
+      "<td class=\"Impstyle1\">Imp#</td><td class=\"Impstyle2\">1</td><td class=\"Impstyle1\">Second:</td><td class=\"Impstyle2\">908</td><td class=\"Impstyle1\">FinBsmt:</td><td class=\"Impstyle2\">1288</td><td class=\"Impstyle1\">Baths:</td><td class=\"Impstyle2\">0.00</td><td class=\"Impstyle1\">Gar Sqft:</td><td class=\"Impstyle2\">0</td><td class=\"Impstyle1\">Bsmt:</td><td class=\"Impstyle2\">Walkout</td><td class=\"Impstyle1\">Cond:</td><td class=\"Impstyle2\">Unknown</td>\n",
+      "</tr><tr>\n",
+      "<td class=\"Impstyle1\">YearBlt::</td><td class=\"Impstyle2\">2000</td><td class=\"Impstyle1\">Third:</td><td class=\"Impstyle2\">0</td><td class=\"Impstyle1\">SFLA:</td><td class=\"Impstyle2\">0</td><td class=\"Impstyle1\">Rooms:</td><td class=\"Impstyle2\">0</td><td class=\"Impstyle1\">Cars:</td><td class=\"Impstyle2\">0</td><td class=\"Impstyle1\">Garage:</td><td class=\"Impstyle2\">Unknown</td><td class=\"Impstyle1\">Xwall:</td><td class=\"Impstyle2\">WoodSiding</td>\n",
+      "</tr><tr>\n",
+      "<td class=\"Impstyle1\">AdjYr:</td><td class=\"Impstyle2\">2000</td><td class=\"Impstyle1\">Addn:</td><td class=\"Impstyle2\">0</td><td class=\"Impstyle1\">UnBsmt:</td><td class=\"Impstyle2\">0</td><td class=\"Impstyle1\">Lofts:</td><td class=\"Impstyle2\">0</td><td class=\"Impstyle1\">Heat:</td><td class=\"Impstyle2\">Hot Water</td><td class=\"Impstyle1\" colspan=\"4\"></td>\n",
+      "</tr>\n",
+      "</table><table class=\"LandData\">\n",
+      "<tr>\n",
+      "<td class=\"Impstyle1\">Acres:</td><td class=\"Impstyle2\">4.0000</td><td class=\"Impstyle1\">Access:</td><td class=\"Impstyle2\">Pub Paved</td><td class=\"Impstyle1\">Topography:</td><td class=\"Impstyle2\">Sloping</td><td class=\"Impstyle1\">View:</td><td class=\"Impstyle2\">Typical</td><td class=\"Impstyle1\">Tree Cover:</td><td class=\"Impstyle2\">Typical</td>\n",
+      "</tr><tr>\n",
+      "<td class=\"Impstyle1\">Hydrology:</td><td class=\"Impstyle2\">None</td><td class=\"Impstyle1\">Sewer:</td><td class=\"Impstyle2\">Public Swr</td><td class=\"Impstyle1\">Water:</td><td class=\"Impstyle2\">Public Wtr</td><td class=\"Impstyle1\">Utilites:</td><td class=\"Impstyle2\">Elec &amp; Gas</td><td class=\"Impstyle1\">Misc:</td><td class=\"Impstyle2\">NONE</td>\n",
+      "</tr>\n",
+      "</table>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "url = 'https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=6507888'\n",
+    "r = requests.get(url)\n",
+    "soup = BeautifulSoup(r.text, 'html.parser')\n",
+    "print(soup)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "3cb70e8b",
    "metadata": {},
    "outputs": [
@@ -20,7 +144,8 @@
       "Secondary Ownership: \n",
       "Mailing Address - C/O: \n",
       "Addr. cell not found\n",
-      "Address - CSZ: FRISCO CO 804435265\n"
+      "Address - CSZ: FRISCO CO 804435265\n",
+      "Most Recent Sale Date: Document Type\n"
      ]
     }
    ],
@@ -81,6 +206,7 @@
     "        ('C/O', 'Mailing Address - C/O'),\n",
     "        ('Addr.', 'Address'),\n",
     "        ('CSZ', 'Address - CSZ'),\n",
+    "        ('Sale Date', 'Most Recent Sale Date')\n",
     "    ]\n",
     "\n",
     "    # Process DetailDataTable\n",
