Sales date retrieval functional

--- a/main.ipynb
+++ b/main.ipynb
@@ -214,6 +214,159 @@
     "\n",
     "find_tables('https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=6507888')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "631a4372",
+   "metadata": {},
+   "source": [
+    "# Find Most Recent Sale Date  \n",
+    "\n",
+    "I don't feel like figuring out how to do this at the moment, so we're gonna use some AI slop for the time being"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "95d2f29e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 1 sale records:\n",
+      "------------------------------------------------------------\n",
+      "1. Sale Date: 8/26/2016\n",
+      "   Reception: 1120146\n",
+      "   Doc Type: EAS\n",
+      "   Price: $0\n",
+      "\n",
+      "Sale dates only: ['8/26/2016']\n"
+     ]
+    }
+   ],
+   "source": [
+    "from bs4 import BeautifulSoup\n",
+    "from datetime import datetime\n",
+    "\n",
+    "def extract_sale_dates(html_content):\n",
+    "    \"\"\"\n",
+    "    Extract sale dates from property detail HTML using BeautifulSoup.\n",
+    "    \n",
+    "    Args:\n",
+    "        html_content (str): HTML content as string\n",
+    "    \n",
+    "    Returns:\n",
+    "        list: List of dictionaries containing sale information\n",
+    "    \"\"\"\n",
+    "    soup = BeautifulSoup(html_content, 'html.parser')\n",
+    "    \n",
+    "    # Find the DetailData table\n",
+    "    detail_table = soup.find('table', class_='DetailData')\n",
+    "    if not detail_table:\n",
+    "        return []\n",
+    "    \n",
+    "    sale_records = []\n",
+    "    \n",
+    "    # Find all cells with class 'style2b' which contain the sale dates\n",
+    "    date_cells = detail_table.find_all('td', class_='style2b')\n",
+    "    \n",
+    "    for cell in date_cells:\n",
+    "        cell_text = cell.get_text(strip=True)\n",
+    "        # Look for date pattern (M/D/YYYY or MM/DD/YYYY)\n",
+    "        if '/' in cell_text and len(cell_text.split('/')) == 3:\n",
+    "            try:\n",
+    "                # Validate it's actually a date\n",
+    "                date_obj = datetime.strptime(cell_text, '%m/%d/%Y')\n",
+    "                \n",
+    "                # Find the parent row to get related data\n",
+    "                parent_row = cell.find_parent('tr')\n",
+    "                if parent_row:\n",
+    "                    row_cells = parent_row.find_all('td')\n",
+    "                    \n",
+    "                    # Extract reception number, document type, and sale price\n",
+    "                    reception = ''\n",
+    "                    doc_type = ''\n",
+    "                    sale_price = ''\n",
+    "                    \n",
+    "                    for i, row_cell in enumerate(row_cells):\n",
+    "                        if row_cell == cell:  # Found our date cell\n",
+    "                            # Reception is typically before the date\n",
+    "                            if i > 0:\n",
+    "                                reception = row_cells[i-1].get_text(strip=True)\n",
+    "                            # Doc type is typically after the date\n",
+    "                            if i+1 < len(row_cells):\n",
+    "                                doc_type = row_cells[i+1].get_text(strip=True)\n",
+    "                            # Sale price is typically after doc type\n",
+    "                            if i+2 < len(row_cells):\n",
+    "                                sale_price = row_cells[i+2].get_text(strip=True)\n",
+    "                            break\n",
+    "                    \n",
+    "                    sale_records.append({\n",
+    "                        'reception_number': reception,\n",
+    "                        'sale_date': cell_text,\n",
+    "                        'date_object': date_obj,\n",
+    "                        'document_type': doc_type,\n",
+    "                        'sale_price': sale_price\n",
+    "                    })\n",
+    "                    \n",
+    "                    # Return immediately after finding the first date\n",
+    "                    break\n",
+    "                    \n",
+    "            except ValueError:\n",
+    "                continue\n",
+    "    \n",
+    "    return sale_records\n",
+    "\n",
+    "def print_sale_dates(sale_records):\n",
+    "    \"\"\"Print formatted sale date information.\"\"\"\n",
+    "    if not sale_records:\n",
+    "        print(\"No sale dates found.\")\n",
+    "        return\n",
+    "    \n",
+    "    print(f\"Found {len(sale_records)} sale records:\")\n",
+    "    print(\"-\" * 60)\n",
+    "    \n",
+    "    for i, record in enumerate(sale_records, 1):\n",
+    "        print(f\"{i}. Sale Date: {record['sale_date']}\")\n",
+    "        print(f\"   Reception: {record['reception_number']}\")\n",
+    "        print(f\"   Doc Type: {record['document_type']}\")\n",
+    "        print(f\"   Price: ${record['sale_price']}\")\n",
+    "        print()\n",
+    "\n",
+    "# Example usage\n",
+    "if __name__ == \"__main__\":\n",
+    "    # Read HTML content from file or string\n",
+    "    with open('html_output.txt', 'r', encoding='utf-8') as file:\n",
+    "        html_content = file.read()\n",
+    "    \n",
+    "    # Extract sale dates\n",
+    "    sale_dates = extract_sale_dates(html_content)\n",
+    "    \n",
+    "    # Print results\n",
+    "    print_sale_dates(sale_dates)\n",
+    "    \n",
+    "    # Just the dates as a simple list\n",
+    "    dates_only = [record['sale_date'] for record in sale_dates]\n",
+    "    print(\"Sale dates only:\", dates_only)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac26d2da",
+   "metadata": {},
+   "source": [
+    "# Integrate Sales Date Into `find_tables` Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fa6d516",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
