Sale Date integrated

--- a/main.ipynb
+++ b/main.ipynb
@@ -143,8 +143,7 @@
       "Primary Ownership: PROSPECTOR VILLAGE HOMEOWNERS ASSOC,\n",
       "Secondary Ownership: \n",
       "Mailing Address - C/O: \n",
-      "Address - CSZ: FRISCO CO 804435265\n",
-      "Most Recent Sale Date: Document Type\n"
+      "Address - CSZ: FRISCO CO 804435265\n"
      ]
     }
    ],
@@ -152,7 +151,7 @@
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "\n",
-    "def find_tables(url):\n",
+    "def extract_data(url):\n",
     "    # Send request and parse HTML\n",
     "    r = requests.get(url)\n",
     "    print(f'Status code = {r.status_code}\\n')\n",
@@ -209,7 +208,7 @@
     "    # Process DetailDataTable\n",
     "    process_table(tables['DetailData'], 'DetailDataTable', detail_labels)\n",
     "\n",
-    "find_tables('https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=6507888')"
+    "extract_data('https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=6507888')"
    ]
   },
   {
@@ -224,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "95d2f29e",
    "metadata": {},
    "outputs": [
@@ -354,16 +353,129 @@
    "id": "ac26d2da",
    "metadata": {},
    "source": [
-    "# Integrate Sales Date Into `find_tables` Function"
+    "# Integrate Sales Date Into `extract_data` Function\n",
+    "\n",
+    "Again, I don't feel like figuring it out right now, so, again... AI slop"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "9fa6d516",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Status code = 200\n",
+      "\n",
+      "Found DetailDataTable\n",
+      "\n",
+      "Property Description: BLDG 51 PROSPECTOR VILLAGE COMMON AREA & CLUBHOUSE FKA LOT 33 WILDERNEST FIL 2\n",
+      "Physical Address: 0050 WILDERNEST CT (CR 1271) BLDG 51\n",
+      "Primary Ownership: PROSPECTOR VILLAGE HOMEOWNERS ASSOC,\n",
+      "Secondary Ownership: \n",
+      "Mailing Address - C/O: \n",
+      "Address: PO BOX 5265\n",
+      "Address - CSZ: FRISCO CO 804435265\n",
+      "Most Recent Sale Date: 8/26/2016\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "from datetime import datetime\n",
+    "\n",
+    "def find_tables(url):\n",
+    "    # Send request and parse HTML\n",
+    "    r = requests.get(url)\n",
+    "    print(f'Status code = {r.status_code}\\n')\n",
+    "    soup = BeautifulSoup(r.text, 'html.parser')\n",
+    "\n",
+    "    # Find tables\n",
+    "    tables = {\n",
+    "        'DetailData': soup.find('table', class_='DetailData'),\n",
+    "        'ValueData': soup.find('table', class_='ValueData'),\n",
+    "        'ImpData': soup.find('table', class_='ImpData'),\n",
+    "        'LandData': soup.find('table', class_='LandData')\n",
+    "    }\n",
+    "\n",
+    "    # Function to extract sale date from DetailData table\n",
+    "    def extract_first_sale_date(table):\n",
+    "        if not table:\n",
+    "            return None\n",
+    "            \n",
+    "        # Find all cells with class 'style2b' which contain the sale dates\n",
+    "        date_cells = table.find_all('td', class_='style2b')\n",
+    "        \n",
+    "        for cell in date_cells:\n",
+    "            cell_text = cell.get_text(strip=True)\n",
+    "            # Look for date pattern (M/D/YYYY or MM/DD/YYYY)\n",
+    "            if '/' in cell_text and len(cell_text.split('/')) == 3:\n",
+    "                try:\n",
+    "                    # Validate it's actually a date\n",
+    "                    date_obj = datetime.strptime(cell_text, '%m/%d/%Y')\n",
+    "                    return cell_text  # Return the first valid date found\n",
+    "                except ValueError:\n",
+    "                    continue\n",
+    "        return None\n",
+    "\n",
+    "    # Function to extract data from a table cell\n",
+    "    def extract_cell_data(table, label):\n",
+    "        if not table:\n",
+    "            print(f\"{label} table not found\")\n",
+    "            return None\n",
+    "        cell = table.find('td', string=lambda text: text and label in text.strip())\n",
+    "        if cell:\n",
+    "            next_cell = cell.find_next('td')\n",
+    "            if next_cell:\n",
+    "                return next_cell.text.strip()\n",
+    "            print(f\"{label} value cell not found\")\n",
+    "        else:\n",
+    "            print(f\"{label} cell not found\")\n",
+    "        return None\n",
+    "\n",
+    "    # Function to process a table and extract multiple fields\n",
+    "    def process_table(table, table_name, labels):\n",
+    "        if table:\n",
+    "            print(f\"Found {table_name}\\n\")\n",
+    "            results = {}\n",
+    "            for label, display_name in labels:\n",
+    "                if label == 'Sale Date':\n",
+    "                    # Use special function for sale date extraction\n",
+    "                    value = extract_first_sale_date(table)\n",
+    "                else:\n",
+    "                    value = extract_cell_data(table, label)\n",
+    "                \n",
+    "                if value is not None:  # Allow empty strings\n",
+    "                    results[display_name] = value\n",
+    "                    print(f\"{display_name}: {value}\")\n",
+    "            return results\n",
+    "        else:\n",
+    "            print(f\"{table_name} not found\")\n",
+    "            return {}\n",
+    "\n",
+    "    # Define labels to extract from DetailDataTable\n",
+    "    detail_labels = [\n",
+    "        ('Property Desc:', 'Property Description'),\n",
+    "        ('Phys. Address:', 'Physical Address'),\n",
+    "        ('Primary:', 'Primary Ownership'),\n",
+    "        ('Secondary:', 'Secondary Ownership'),\n",
+    "        ('C/O', 'Mailing Address - C/O'),\n",
+    "        ('Addr:', 'Address'),\n",
+    "        ('CSZ', 'Address - CSZ'),\n",
+    "        ('Sale Date', 'Most Recent Sale Date')\n",
+    "    ]\n",
+    "\n",
+    "    # Process DetailDataTable\n",
+    "    return process_table(tables['DetailData'], 'DetailDataTable', detail_labels)\n",
+    "\n",
+    "# Example usage\n",
+    "if __name__ == \"__main__\":\n",
+    "    find_tables('https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=6507888')"
+   ]
   }
  ],
  "metadata": {
