Moved Most Recent Sale Date to the top of the output

--- a/main.ipynb
+++ b/main.ipynb
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "9fa6d516",
    "metadata": {},
    "outputs": [
@@ -372,14 +372,14 @@
       "\n",
       "Found DetailDataTable\n",
       "\n",
+      "Most Recent Sale Date: 8/26/2016\n",
       "Property Description: BLDG 51 PROSPECTOR VILLAGE COMMON AREA & CLUBHOUSE FKA LOT 33 WILDERNEST FIL 2\n",
       "Physical Address: 0050 WILDERNEST CT (CR 1271) BLDG 51\n",
       "Primary Ownership: PROSPECTOR VILLAGE HOMEOWNERS ASSOC,\n",
       "Secondary Ownership: \n",
       "Mailing Address - C/O: \n",
       "Address: PO BOX 5265\n",
-      "Address - CSZ: FRISCO CO 804435265\n",
-      "Most Recent Sale Date: 8/26/2016\n"
+      "Address - CSZ: FRISCO CO 804435265\n"
      ]
     }
    ],
@@ -459,14 +459,14 @@
     "\n",
     "    # Define labels to extract from DetailDataTable\n",
     "    detail_labels = [\n",
+    "        ('Sale Date', 'Most Recent Sale Date'),\n",
     "        ('Property Desc:', 'Property Description'),\n",
     "        ('Phys. Address:', 'Physical Address'),\n",
     "        ('Primary:', 'Primary Ownership'),\n",
     "        ('Secondary:', 'Secondary Ownership'),\n",
     "        ('C/O', 'Mailing Address - C/O'),\n",
     "        ('Addr:', 'Address'),\n",
-    "        ('CSZ', 'Address - CSZ'),\n",
-    "        ('Sale Date', 'Most Recent Sale Date')\n",
+    "        ('CSZ', 'Address - CSZ')\n",
     "    ]\n",
     "\n",
     "    # Process DetailDataTable\n",
