--- a/main.ipynb
+++ b/main.ipynb
@@ -5,12 +5,12 @@
    "id": "0146fc4d",
    "metadata": {},
    "source": [
-    "# View All Page Contents"
+    "# View All Page HTML Content"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "id": "477ef4ae",
    "metadata": {},
    "outputs": [
@@ -125,8 +125,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "155da89f",
+   "metadata": {},
+   "source": [
+    "# Extract Easy Data First"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "3cb70e8b",
    "metadata": {},
    "outputs": [
@@ -216,14 +224,12 @@
    "id": "631a4372",
    "metadata": {},
    "source": [
-    "# Find Most Recent Sale Date  \n",
-    "\n",
-    "I don't feel like figuring out how to do this at the moment, so we're gonna use some AI slop for the time being"
+    "# Find Most Recent Sale Date  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "95d2f29e",
    "metadata": {},
    "outputs": [
@@ -353,14 +359,12 @@
    "id": "ac26d2da",
    "metadata": {},
    "source": [
-    "# Integrate Sales Date Into `extract_data` Function\n",
-    "\n",
-    "Again, I don't feel like figuring it out right now, so, again... AI slop"
+    "# Integrate Sales Date Into `extract_data` Function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "id": "9fa6d516",
    "metadata": {},
    "outputs": [
@@ -476,6 +480,22 @@
     "if __name__ == \"__main__\":\n",
     "    find_tables('https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=6507888')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c574137d",
+   "metadata": {},
+   "source": [
+    "# Automatically Pull Most Recent Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b55c526d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
