--- a/main.ipynb
+++ b/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "477ef4ae",
    "metadata": {},
    "outputs": [
@@ -126,15 +126,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "155da89f",
+   "id": "55d0e958",
    "metadata": {},
    "source": [
-    "# Extract Easy Data First"
+    "# Retrieve Data That's Easy to Extract First"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "3cb70e8b",
    "metadata": {},
    "outputs": [
@@ -224,12 +224,12 @@
    "id": "631a4372",
    "metadata": {},
    "source": [
-    "# Find Most Recent Sale Date  "
+    "# Find Most Recent Sale Date"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "95d2f29e",
    "metadata": {},
    "outputs": [
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "id": "9fa6d516",
    "metadata": {},
    "outputs": [
