Added README and URL print

--- a/main.ipynb
+++ b/main.ipynb
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "id": "9fa6d516",
    "metadata": {},
    "outputs": [
@@ -376,6 +376,7 @@
       "\n",
       "Found DetailDataTable\n",
       "\n",
+      "Source URL: https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=6507888\n",
       "Most Recent Sale Date: 8/26/2016\n",
       "Property Description: BLDG 51 PROSPECTOR VILLAGE COMMON AREA & CLUBHOUSE FKA LOT 33 WILDERNEST FIL 2\n",
       "Physical Address: 0050 WILDERNEST CT (CR 1271) BLDG 51\n",
@@ -445,6 +446,7 @@
     "    def process_table(table, table_name, labels):\n",
     "        if table:\n",
     "            print(f\"Found {table_name}\\n\")\n",
+    "            print(f\"Source URL: {url}\")\n",
     "            results = {}\n",
     "            for label, display_name in labels:\n",
     "                if label == 'Sale Date':\n",
