--- a/main.ipynb
+++ b/main.ipynb
@@ -488,13 +488,256 @@
    "id": "c574137d",
    "metadata": {},
    "source": [
-    "# Automatically Pull Most Recent Data"
+    "# Find the Last Schedule ID\n",
+    "\n",
+    "We want to find the last Schedule ID so that we can create a range of numbers that contains all Schedule IDs. Once we have that, we can constantly check the page for new IDs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "b55c526d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found and saved: 6508600\n",
+      "Found and saved: 6508601\n",
+      "Found and saved: 6508602\n",
+      "Found and saved: 6508603\n",
+      "Found and saved: 6508604\n",
+      "Found and saved: 6508605\n",
+      "Found and saved: 6508606\n",
+      "Found and saved: 6508607\n",
+      "Found and saved: 6508608\n",
+      "Found and saved: 6508609\n",
+      "Found and saved: 6508610\n",
+      "Found and saved: 6508611\n",
+      "Found and saved: 6508612\n",
+      "Found and saved: 6508613\n",
+      "Found and saved: 6508614\n",
+      "Schedule ID 6508615 doesn't exist. Stopping.\n",
+      "Discovery complete! Cleaning up duplicates...\n",
+      "Removed duplicates. Final count: 15 unique schedule IDs\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import time\n",
+    "import csv\n",
+    "import os\n",
+    "import pandas as pd\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "def check_schedule_exists(schedule_id):\n",
+    "   url = f\"https://gis.summitcountyco.gov/map/DetailData.aspx?Schno={schedule_id}\"\n",
+    "   try:\n",
+    "       response = requests.get(url, timeout=10)\n",
+    "       if response.status_code != 200:\n",
+    "           return False\n",
+    "           \n",
+    "       soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "       table = soup.find('table', class_='DetailData')\n",
+    "       \n",
+    "       if table:\n",
+    "           # Look for Property Desc cell\n",
+    "           cell = table.find('td', string=lambda text: text and 'Property Desc:' in text.strip())\n",
+    "           if cell:\n",
+    "               next_cell = cell.find_next('td')\n",
+    "               if next_cell and next_cell.text.strip():\n",
+    "                   return True\n",
+    "       return False\n",
+    "   except:\n",
+    "       return False\n",
+    "\n",
+    "def save_to_csv(schedule_id, filename='schedule_ids.csv'):\n",
+    "   # Check if file exists to determine if we need headers\n",
+    "   file_exists = os.path.isfile(filename)\n",
+    "   \n",
+    "   with open(filename, 'a', newline='') as file:\n",
+    "       writer = csv.writer(file)\n",
+    "       if not file_exists:\n",
+    "           writer.writerow(['schedule_id'])  # Header\n",
+    "       writer.writerow([schedule_id])\n",
+    "\n",
+    "def remove_duplicates_from_csv(filename='schedule_ids.csv'):\n",
+    "   # Read the CSV\n",
+    "   df = pd.read_csv(filename)\n",
+    "   \n",
+    "   # Remove duplicates and sort\n",
+    "   df_clean = df.drop_duplicates().sort_values('schedule_id')\n",
+    "   \n",
+    "   # Save back to the same file\n",
+    "   df_clean.to_csv(filename, index=False)\n",
+    "   \n",
+    "   print(f\"Removed duplicates. Final count: {len(df_clean)} unique schedule IDs\")\n",
+    "\n",
+    "def find_all_schedule_ids(start_range=6508600, end_range=10000000):\n",
+    "   for schedule_id in range(start_range, end_range + 1):\n",
+    "       if check_schedule_exists(schedule_id):\n",
+    "           save_to_csv(schedule_id)  # Save immediately\n",
+    "           print(f\"Found and saved: {schedule_id}\")\n",
+    "       else:\n",
+    "           print(f\"Schedule ID {schedule_id} doesn't exist. Stopping.\")\n",
+    "           break\n",
+    "       \n",
+    "       time.sleep(0.5)  # Be nice to their server\n",
+    "       \n",
+    "       if schedule_id % 1000 == 0:  # Progress indicator\n",
+    "           print(f\"Checked up to: {schedule_id}\")\n",
+    "   \n",
+    "   print(\"Discovery complete! Cleaning up duplicates...\")\n",
+    "   remove_duplicates_from_csv()\n",
+    "\n",
+    "# Usage\n",
+    "find_all_schedule_ids()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1bdc7cdd",
+   "metadata": {},
+   "source": [
+    "# Confirm that 6508614 Is Truly the Last ID"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "25b2d8f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Schedule ID 6508610: VALID (has Property Desc)\n",
+      "Schedule ID 6508611: VALID (has Property Desc)\n",
+      "Schedule ID 6508612: VALID (has Property Desc)\n",
+      "Schedule ID 6508613: VALID (has Property Desc)\n",
+      "Schedule ID 6508614: VALID (has Property Desc)\n",
+      "Schedule ID 6508615: Table found but no Property Desc\n",
+      "Table content: \n",
+      "\n",
+      "Schedule # 6508615\n",
+      "\n",
+      "Property Desc:  SubdivFilingPhaseBlockLot\n",
+      "\n",
+      " SubCode\n",
+      "\n",
+      "Phys. Address: PPI:\n",
+      "\n",
+      " Ownership Econ:\n",
+      "\n",
+      " Nhood:\n",
+      "\n",
+      "Primary:,  TaxArea: 2025Tship:\n",
+      "\n",
+      "Secondary: AssdVal:0Est. Tax/Tax Rate:0Range:...\n",
+      "Schedule ID 6508616: Table found but no Property Desc\n",
+      "Table content: \n",
+      "\n",
+      "Schedule # 6508616\n",
+      "\n",
+      "Property Desc:  SubdivFilingPhaseBlockLot\n",
+      "\n",
+      " SubCode\n",
+      "\n",
+      "Phys. Address: PPI:\n",
+      "\n",
+      " Ownership Econ:\n",
+      "\n",
+      " Nhood:\n",
+      "\n",
+      "Primary:,  TaxArea: 2025Tship:\n",
+      "\n",
+      "Secondary: AssdVal:0Est. Tax/Tax Rate:0Range:...\n",
+      "Schedule ID 6508617: Table found but no Property Desc\n",
+      "Table content: \n",
+      "\n",
+      "Schedule # 6508617\n",
+      "\n",
+      "Property Desc:  SubdivFilingPhaseBlockLot\n",
+      "\n",
+      " SubCode\n",
+      "\n",
+      "Phys. Address: PPI:\n",
+      "\n",
+      " Ownership Econ:\n",
+      "\n",
+      " Nhood:\n",
+      "\n",
+      "Primary:,  TaxArea: 2025Tship:\n",
+      "\n",
+      "Secondary: AssdVal:0Est. Tax/Tax Rate:0Range:...\n",
+      "Schedule ID 6508618: VALID (has Property Desc)\n",
+      "Schedule ID 6508619: VALID (has Property Desc)\n",
+      "Schedule ID 6508620: VALID (has Property Desc)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import time\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "def check_and_report_schedule(schedule_id):\n",
+    "   url = f\"https://gis.summitcountyco.gov/map/DetailData.aspx?Schno={schedule_id}\"\n",
+    "   try:\n",
+    "       response = requests.get(url, timeout=10)\n",
+    "       if response.status_code != 200:\n",
+    "           print(f\"Schedule ID {schedule_id}: HTTP error {response.status_code}\")\n",
+    "           return False\n",
+    "           \n",
+    "       soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "       table = soup.find('table', class_='DetailData')\n",
+    "       \n",
+    "       if table:\n",
+    "           # Look for Property Desc cell\n",
+    "           cell = table.find('td', string=lambda text: text and 'Property Desc:' in text.strip())\n",
+    "           if cell:\n",
+    "               next_cell = cell.find_next('td')\n",
+    "               if next_cell and next_cell.text.strip():\n",
+    "                   print(f\"Schedule ID {schedule_id}: VALID (has Property Desc)\")\n",
+    "                   return True\n",
+    "           \n",
+    "           print(f\"Schedule ID {schedule_id}: Table found but no Property Desc\")\n",
+    "           print(f\"Table content: {table.get_text()[:200]}...\")  # First 200 chars\n",
+    "           return False\n",
+    "       else:\n",
+    "           print(f\"Schedule ID {schedule_id}: No DetailData table found\")\n",
+    "           print(f\"Page content preview: {soup.get_text()[:200]}...\")  # First 200 chars\n",
+    "           return False\n",
+    "   except Exception as e:\n",
+    "       print(f\"Schedule ID {schedule_id}: Exception - {str(e)}\")\n",
+    "       return False\n",
+    "\n",
+    "def verify_range(start_range=6508610, end_range=6508620):\n",
+    "   for schedule_id in range(start_range, end_range + 1):\n",
+    "       check_and_report_schedule(schedule_id)\n",
+    "       time.sleep(0.5)  # Be nice to their server\n",
+    "\n",
+    "# Usage\n",
+    "verify_range()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20ffed1b",
+   "metadata": {},
+   "source": [
+    "# Check All Schedule IDs\n",
+    "\n",
+    "Unfortunately, there are breaks in the Schedule ID sequence. So... we're gonna have to check all of them"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b55c526d",
+   "id": "3426dd16",
    "metadata": {},
    "outputs": [],
    "source": []
