--- a/main.ipynb
+++ b/main.ipynb
@@ -739,8 +739,114 @@
    "execution_count": null,
    "id": "3426dd16",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Schedule ID 100: No DetailData table found\n",
+      "Schedule ID 101: No DetailData table found\n",
+      "Schedule ID 102: No DetailData table found\n",
+      "Schedule ID 103: No DetailData table found\n",
+      "Schedule ID 104: No DetailData table found\n",
+      "Schedule ID 105: No DetailData table found\n",
+      "Schedule ID 106: No DetailData table found\n",
+      "Schedule ID 107: No DetailData table found\n",
+      "Schedule ID 108: No DetailData table found\n",
+      "Schedule ID 109: No DetailData table found\n",
+      "Schedule ID 110: No DetailData table found\n",
+      "Schedule ID 111: No DetailData table found\n",
+      "Schedule ID 112: No DetailData table found\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[14]\u001b[39m\u001b[32m, line 73\u001b[39m\n\u001b[32m     70\u001b[39m       time.sleep(\u001b[32m0.5\u001b[39m)  \u001b[38;5;66;03m# Be nice to their server\u001b[39;00m\n\u001b[32m     72\u001b[39m \u001b[38;5;66;03m# Usage\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m73\u001b[39m \u001b[43mverify_range\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[14]\u001b[39m\u001b[32m, line 70\u001b[39m, in \u001b[36mverify_range\u001b[39m\u001b[34m(start_range, end_range)\u001b[39m\n\u001b[32m     67\u001b[39m     save_to_csv(final_message)\n\u001b[32m     68\u001b[39m     \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m70\u001b[39m \u001b[43mtime\u001b[49m\u001b[43m.\u001b[49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m0.5\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import time\n",
+    "import csv\n",
+    "import os\n",
+    "import pandas as pd\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "def check_and_report_schedule(schedule_id):\n",
+    "  url = f\"https://gis.summitcountyco.gov/map/DetailData.aspx?Schno={schedule_id}\"\n",
+    "  try:\n",
+    "      response = requests.get(url, timeout=10)\n",
+    "      if response.status_code != 200:\n",
+    "          message = f\"Schedule ID {schedule_id}: HTTP error {response.status_code}\"\n",
+    "          print(message)\n",
+    "          return False, message\n",
+    "          \n",
+    "      soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "      table = soup.find('table', class_='DetailData')\n",
+    "      \n",
+    "      if table:\n",
+    "          # Look for Property Desc cell\n",
+    "          cell = table.find('td', string=lambda text: text and 'Property Desc:' in text.strip())\n",
+    "          if cell:\n",
+    "              next_cell = cell.find_next('td')\n",
+    "              if next_cell and next_cell.text.strip():\n",
+    "                  message = f\"Schedule ID {schedule_id}: VALID (has Property Desc)\"\n",
+    "                  print(message)\n",
+    "                  return True, message\n",
+    "          \n",
+    "          message = f\"Schedule ID {schedule_id}: Table found but no Property Desc\"\n",
+    "          print(message)\n",
+    "          return False, message\n",
+    "      else:\n",
+    "          message = f\"Schedule ID {schedule_id}: No DetailData table found\"\n",
+    "          print(message)\n",
+    "          return False, message\n",
+    "  except Exception as e:\n",
+    "      message = f\"Schedule ID {schedule_id}: Exception - {str(e)}\"\n",
+    "      print(message)\n",
+    "      return False, message\n",
+    "\n",
+    "def save_to_csv(message, filename='schedule_results.csv'):\n",
+    "  # Check if file exists to determine if we need headers\n",
+    "  file_exists = os.path.isfile(filename)\n",
+    "  \n",
+    "  with open(filename, 'a', newline='') as file:\n",
+    "      writer = csv.writer(file)\n",
+    "      if not file_exists:\n",
+    "          writer.writerow(['result'])  # Header\n",
+    "      writer.writerow([message])\n",
+    "\n",
+    "def verify_range(start_range=0, end_range=100000000):\n",
+    "  consecutive_false = 0\n",
+    "  \n",
+    "  for schedule_id in range(start_range, end_range + 1):\n",
+    "      result, message = check_and_report_schedule(schedule_id)\n",
+    "      save_to_csv(message)  # Save the message instead of just the ID\n",
+    "      \n",
+    "      if result:\n",
+    "          consecutive_false = 0  # Reset counter on valid find\n",
+    "      else:\n",
+    "          consecutive_false += 1\n",
+    "          \n",
+    "      if consecutive_false >= 100:\n",
+    "          final_message = f\"Stopping after 100 consecutive invalid IDs. Last checked: {schedule_id}\"\n",
+    "          print(final_message)\n",
+    "          save_to_csv(final_message)\n",
+    "          break\n",
+    "          \n",
+    "      time.sleep(0.5)  # Be nice to their server\n",
+    "\n",
+    "# Usage\n",
+    "verify_range()"
+   ]
   }
  ],
  "metadata": {
